--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -48,11 +48,16 @@ italic-strong
   background-color: #ebf6ff
 .bg-8
   background-color: #FFF1C7
+.bg-9
+  background-color: #2b2b2b  
 .fondo-t2
   background: url("../assets/curso/temas/t2/5.svg")
   background-size: cover
   background-position:center
   filter: drop-shadow(0px 10px 6px rgba(0,0,0,.4))
+
+.f-mono p
+  font-family: monospace
 
 
 /* Tema 2 */
@@ -153,3 +158,8 @@ italic-strong
   .container .cards .face.face2 p
     font-size: 1em
 
+/* TEMA 13 *//
+.tema13 .horizontal-scroll
+  align-items: flex-start !important
+  .linea-tiempo-c__content__item
+    margin-top: 30px !important
